fixed esplorer wrapping
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@31597 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -746,7 +746,12 @@ ul.il_ExplorerNoIndent
 	list-style:none;
 }
 
-
+li.il_Explorer
+{
+	margin: 0px;
+	padding: 0px;
+	white-space: nowrap;
+}
 
 li.il_ExplorerInline
 {
